--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,7 @@
   "name": "react-web",
   "scripts": {
     "start": "parcel src/index.html --port 3000",
-    "build": "parcel build src/index.html",
-    "serve": "npx nodemon -r esm ./server.js",
-    "production": "node -r esm ./server.js"
+    "build": "parcel build src/index.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.11.0"
