--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-web",
   "scripts": {
-    "start": "parcel src/index.html --port 3000",
-    "build": "parcel build src/index.html"
+    "start": "npx parcel src/index.html --port 3000",
+    "build": "npx parcel build src/index.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.11.0"
