--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,12 @@
     "start": "npx parcel src/index.html --port 3000",
     "build": "npx parcel build src/index.html"
   },
-  "devDependencies": {
-    "parcel-bundler": "^1.11.0"
-  },
+  "devDependencies": {},
   "browserslist": [
     "last 1 Chrome versions"
   ],
   "dependencies": {
+    "parcel-bundler": "^1.11.0",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
@@ -28,7 +27,6 @@
     "images": "^3.2.3",
     "jquery": "^3.5.1",
     "konva": "^7.2.1",
-    "parcel": "^1.12.4",
     "parcel-plugin-svelte": "^4.0.4",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
