--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,18 @@
 {
   "name": "react-web",
   "scripts": {
-    "start": "npx parcel src/index.html --port 3000",
-    "build": "npx parcel build src/index.html"
+    "start": "parcel src/index.html --port 3000",
+    "build": "parcel build src/index.html"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-svelte": "^4.0.6",
+    "svelte": "^3.31.2"
+  },
   "browserslist": [
     "last 1 Chrome versions"
   ],
   "dependencies": {
-    "parcel-bundler": "^1.11.0",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
@@ -27,7 +30,7 @@
     "images": "^3.2.3",
     "jquery": "^3.5.1",
     "konva": "^7.2.1",
-    "parcel-plugin-svelte": "^4.0.4",
+    "parcel": "^2.0.0-beta.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
