--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14
 WORKDIR /client
 COPY package.json ./
-RUN npm install
+RUN NODE_ENV=development npm install
 COPY . .
 CMD ["npm", "run", "start"]
