--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,5 @@ services:
     volumes:
       - ./client:/client
     ports: ["80:3000"]
+    environment:
+      - SERVER_HOST=http://server:8000
